# birdapi

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/bird/: __init__.py  _config.py  _constants.py  _features.py  _models.py  _query_ids.py  _utils.py  cli.py  client.py
tests/: test_utils.py
