[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bird"
version = "0.1.0"
description = "CLI and library for X/Twitter GraphQL API (cookie auth)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
bird = "bird.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bird"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
