[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birdapi"
version = "0.0.1"
description = "CLI and library for X/Twitter GraphQL API (cookie auth, no API key required)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "dvermaas" }]
keywords = ["twitter", "x", "graphql", "cli", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/dvermaas/birdapi"
Repository = "https://github.com/dvermaas/birdapi"
Issues = "https://github.com/dvermaas/birdapi/issues"

[project.scripts]
bird = "bird.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bird"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
